--- a/services/react/client-react/index.html
+++ b/services/react/client-react/index.html
@@ -3,10 +3,115 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevOps Directive Kubernetes Course</title>
+    <meta name="description" content="Master Kubernetes and DevOps - Interactive learning platform for modern cloud-native development" />
+    <meta name="theme-color" content="#326ce5" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kubernetes Learning Platform" />
+    <meta property="og:description" content="Master Kubernetes with hands-on interactive lessons" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kubernetes Learning Platform" />
+    <meta name="twitter:description" content="Master Kubernetes with hands-on interactive lessons" />
+
+    <title>Kubernetes Learning Platform</title>
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        min-height: 100vh;
+      }
+
+      #root {
+        min-height: 100vh;
+      }
+
+      .loading-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        color: white;
+      }
+
+      .loading-spinner {
+        width: 60px;
+        height: 60px;
+        border: 4px solid rgba(255, 255, 255, 0.3);
+        border-top-color: white;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      .loading-text {
+        margin-top: 24px;
+        font-size: 18px;
+        font-weight: 500;
+        opacity: 0.9;
+      }
+
+      .loading-subtitle {
+        margin-top: 8px;
+        font-size: 14px;
+        opacity: 0.7;
+      }
+
+      .loading-credit {
+        position: absolute;
+        bottom: 20px;
+        font-size: 12px;
+        opacity: 0.5;
+        text-align: center;
+      }
+
+      .loading-credit a {
+        color: white;
+        text-decoration: none;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        transition: opacity 0.2s;
+      }
+
+      .loading-credit a:hover {
+        opacity: 1;
+      }
+
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+
+      @keyframes fadeOut {
+        to {
+          opacity: 0;
+          visibility: hidden;
+        }
+      }
+
+      .loaded .loading-container {
+        animation: fadeOut 0.3s ease-out forwards;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading-container">
+        <div class="loading-spinner"></div>
+        <div class="loading-text">Kubernetes Learning</div>
+        <div class="loading-subtitle">Loading your cloud-native experience...</div>
+        <div class="loading-credit">
+          Course content inspired by <a href="https://devopsdirective.com" target="_blank" rel="noopener">DevOps Directive</a>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
